# OCRDLL

./: CMakeLists.txt  README.md  dll_test.py  ocrdll.cpp  ocrdll.h  ocrdll.pro  ocrdll_global.h
include/: autolog.h  clipper.h  dirent.h  ocr_cls.h  ocr_det.h  ocr_main.h  ocr_rec.h  ocrdll.h  postprocess_op.h  preprocess_op.h  utility.h
paddle_inference/: CMakeCache.txt  version.txt
paddle_inference/paddle/lib/: paddle_inference.exp
src/: clipper.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_main.cpp  ocr_rec.cpp  ocrdll.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
